--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="./media/thumbnail.png" class="song-img">
             <h1>Low Life High Life</h1>
             <p>Dan Heing</p>
-            <audio controls id="song">
+            <audio id="song">
                 <source src="media/Dan Heing - Low Life High Life.mp3" type="audio/mpeg">
             </audio>
             <input type="range" value="0" id="progress">
